kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mc
  name: mc-app
spec:
  selector:
    matchLabels:
      app: mc-app
  template:
    metadata:
      labels:
        app: mc-app
    spec:
      containers:
      - name: mc-app
        image: localhost:32000/mc:latest
        resources:
          limits:
            memory: "5Gi"
        volumeMounts:
          - name: ftp-volume
            mountPath: /var/minecraft
        ports:
        - containerPort: 25565
      volumes:
        - name: ftp-volume
          persistentVolumeClaim:
            claimName: ftp-pvc
