kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-app
  namespace: mc
spec:
  type: NodePort
  selector:
    app: mc-app
  ports:
  - port: 25565
    targetPort: 25565
    protocol: TCP
    nodePort: 30000
